--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.cdnfonts.com/css/bl-melody');
+@import url('https://db.onlinewebfonts.com/c/d002e7c91b889cc10ce21789cfde95dd?family=Sequel+100+Wide+95');
 
 @tailwind base;
 @tailwind components;
